# psql-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  init.sh  nginx.conf  pyproject.toml
before/: Dockerfile  init.sh
before/sql/: init.sql
nginx/: Dockerfile
postgres/: Dockerfile  init.sh
postgres/sql/: init.sql
