[project]
name = "psql-project"
version = "0.1.0"
description = ""
authors = [
    {name = "dronhead",email = "przdnttt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
flake8 = "^7.2.0"
yamllint = "^1.37.1"
